src/coilcl/src/Parser.cpp
// Copyright (c) 2017 Quenza Inc. All rights reserved.
//
// This file is part of the Cryptox project.
//
// Use of this source code is governed by a private license
// that can be found in the LICENSE file. Content can not be 
// copied and/or distributed without the express of the author.

#include "AST.h"
#include "Parser.h"

#include <iostream>
#include <exception>
#include <sstream>

#define CURRENT_DATA() m_comm.Current().FetchData()
#define PREVIOUS_TOKEN() m_comm.Previous().FetchToken()
#define CURRENT_TOKEN() m_comm.Current().FetchToken()
#define CURRENT_LOCATION() m_comm.Current().FetchLocation()
#define MATCH_TOKEN(t) (CURRENT_TOKEN() == t)
#define NOT_TOKEN(t) (CURRENT_TOKEN() != t)

#define AST_ROOT() m_ast

#define MAKE_RESV_REF() CoilCl::AST::MakeASTNode<DeclRefExpr>(m_identifierStack.top()); m_identifierStack.pop();

class UnexpectedTokenException : public std::exception
{
public:
	UnexpectedTokenException() noexcept
	{
	}

	explicit UnexpectedTokenException(char const* const message, int line, int column, Token token) noexcept
		: m_line{ line }
		, m_column{ column }
	{
		std::stringstream ss;
		ss << "Semantic error: " << message;
		ss << " before " << "'" + Keyword{ token }.Print() + "'" << " token at ";
		ss << line << ':' << column;
		_msg = ss.str();
	}

	virtual int Line() const noexcept
	{
		return m_line;
	}

	virtual int Column() const noexcept
	{
		return m_column;
	}

	virtual const char *what() const noexcept
	{
		return _msg.c_str();
	}

protected:
	std::string _msg;

private:
	int m_line;
	int m_column;
};

class SyntaxException : public std::exception
{
public:
	SyntaxException() noexcept
	{
	}

	explicit SyntaxException(char const* const message, char token, int line, int column) noexcept
		: m_token{ token }
		, m_line{ line }
		, m_column{ column }
	{
		std::stringstream ss;
		ss << "Syntax error: " << message << " at ";
		ss << line << ':' << column;
		_msg = ss.str();
	}

	virtual int Line() const noexcept
	{
		return m_line;
	}

	virtual int Column() const noexcept
	{
		return m_column;
	}

	virtual const char *what() const noexcept
	{
		return _msg.c_str();
	}

protected:
	std::string _msg;

private:
	char m_token;
	int m_line;
	int m_column;
};

class ParseException : public std::exception
{
public:
	ParseException() noexcept = default;

	explicit ParseException(char const* const message, int line, int column) noexcept
		: m_line{ line }
		, m_column{ column }
	{
		std::stringstream ss;
		ss << "Parser error: " << message;
		ss << " " << line << ':' << column;
		_msg = ss.str();
	}

	virtual int Line() const noexcept
	{
		return m_line;
	}

	virtual int Column() const noexcept
	{
		return m_column;
	}

	virtual const char *what() const noexcept
	{
		return _msg.c_str();
	}

protected:
	std::string _msg;

private:
	int m_line;
	int m_column;
};

Parser::Parser(std::shared_ptr<CoilCl::Profile>& profile, TokenizerPtr tokenizer)
	: Stage{ this, StageType::Type::SyntacticAnalysis }
	, m_profile{ profile }
	, lex{ tokenizer }
{
	lex->RegisterErrorHandler([](const std::string& err, char token, int line, int column)
	{
		throw SyntaxException(err.c_str(), token, line, column);
	});
}

Parser& Parser::CheckCompatibility()
{
	//TODO: check profile options here
	return (*this);
}

void Parser::Error(const char* err, Token token)
{
	throw UnexpectedTokenException{ err, m_comm.Current().FetchLine(), m_comm.Current().FetchColumn(), token };
}

// Request next token from the tokenizer
void Parser::NextToken()
{
	if (m_comm.IsIndexHead()) {
		int itok = lex->Lex();
		auto location = std::make_pair(lex->TokenLine(), lex->TokenColumn());

		// Tokenizer will return a pointer to the value data block and the parser
		// must take care of the freeing processing once the data is done with.
		// Wrap the data pointer in a shared ptr to handle object lifetime.
		std::shared_ptr<Value> value;
		if (lex->HasData()) {
			value = lex->Data();
		}

		m_comm.Push(TokenState(itok, std::move(value), std::move(location)));
	}
	else {
		m_comm.ShiftForward();
	}
}

// Expect next token to be provided token, if so
// move lexer forward. If not report error and bail.
void Parser::ExpectToken(Token token)
{
	if (NOT_TOKEN(token)) {
		Error("expected expression", token);
	}

	NextToken();
}

//TODO: remove ?
void Parser::ExpectIdentifier()
{
	if (NOT_TOKEN(TK_IDENTIFIER)) {
		Error("expected identifier", TK_IDENTIFIER);
	}

	assert(m_comm.Current().HasData());

	NextToken();
}

// Storage class specifiers determine the lifetime and scope of the object
auto Parser::StorageClassSpecifier()
{
	using namespace Typedef;

	switch (CURRENT_TOKEN()) {
	case TK_EXTERN:
		return TypedefBase::StorageClassSpecifier::EXTERN;
	case TK_REGISTER:
		return TypedefBase::StorageClassSpecifier::REGISTER;
	case TK_STATIC:
		return TypedefBase::StorageClassSpecifier::STATIC;
	case TK_AUTO:
		return TypedefBase::StorageClassSpecifier::AUTO;
	case TK_TYPEDEF:
		return TypedefBase::StorageClassSpecifier::TYPEDEF;
	}

	return TypedefBase::StorageClassSpecifier::NONE;
}

// Type specifiers determine size of the object in memory
bool Parser::TypeSpecifier()
{
	using namespace Typedef;

	switch (CURRENT_TOKEN()) {
	case TK_VOID:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::VOID_T));
		return true;
	case TK_CHAR:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::CHAR));
		return true;
	case TK_SHORT:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::SHORT));
		return true;
	case TK_INT:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::INT));
		return true;
	case TK_LONG:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::LONG));
		return true;
	case TK_FLOAT:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::FLOAT));
		return true;
	case TK_DOUBLE:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::DOUBLE));
		return true;
	case TK_SIGNED:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::SIGNED));
		return true;
	case TK_UNSIGNED:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::UNSIGNED));
		return true;
	case TK_BOOL:
		m_typeStack.push(Util::MakeBuiltinType(BuiltinType::Specifier::BOOL));
		return true;
	case TK_COMPLEX:
		throw StageBase::StageException{ Name(), "complex types are not supported" };
	case TK_IMAGINARY:
		throw StageBase::StageException{ Name(), "imaginary types are not supported" };
	}

	// Check for enum declarations
	if (EnumSpecifier()) {
		return true;
	}

	// Check for struct or union declarations
	if (StructOrUnionSpecifier()) {
		return true;
	}

	// Check if identifier is registered as typename
	if (TypenameSpecifier()) {
		return true;
	}

	return false;
}

// Specifying type correctness
auto Parser::TypeQualifier()
{
	using namespace Typedef;

	switch (CURRENT_TOKEN()) {
	case TK_CONST:
		return TypedefBase::TypeQualifier::CONST_T;
	case TK_VOLATILE:
		return TypedefBase::TypeQualifier::VOLATILE;
	}

	return TypedefBase::TypeQualifier::NONE;
}

template<typename _Ty, typename _Decay = int>
auto IsSet(_Ty v) -> bool
{
	return static_cast<bool>(static_cast<_Decay>(v));
}

bool Parser::DeclarationSpecifiers()
{
	using namespace Typedef;

	TypedefBase::StorageClassSpecifier tmpSCP = TypedefBase::StorageClassSpecifier::NONE;
	std::vector<TypedefBase::TypeQualifier> tmpTQ;
	auto typeCount = m_typeStack.size();
	auto isInline = false;

	bool cont = true;
	while (cont) {
		cont = false;

		// Find a type specifier, per preference only once. Certain types allow for
		// multiple specifiers to combine into a single type base, if we found such a
		// type, we permit another run.
		if ((typeCount == m_typeStack.size() || m_typeStack.top()->AllowCoalescence())
			&& TypeSpecifier()) {
			NextToken();
			cont = true;
		}

		// Only one specifier can be applied per object type
		auto sc = StorageClassSpecifier();
		if (IsSet(sc)) {
			NextToken();
			tmpSCP = sc;
			cont = true;
		}

		// Can have multiple type qualifiers, list them
		auto tq = TypeQualifier();
		if (IsSet(tq)) {
			NextToken();
			tmpTQ.push_back(tq);
			cont = true;
		}

		// Function inline specifier
		if (MATCH_TOKEN(TK_INLINE)) {
			NextToken();
			isInline = true;
			cont = true;
		}
	}

	// No type was found, bail
	if (typeCount == m_typeStack.size()) {
		return false;
	}

	// Result yields multiple types, try type coalescence
	auto deltaTypeCount = m_typeStack.size() - typeCount;
	if (deltaTypeCount > 1) {
		auto lastType = m_typeStack.top();
		m_typeStack.pop();
		for (size_t i = 0; i < (deltaTypeCount - 1); ++i) {
			lastType->Consolidate(m_typeStack.top());
			m_typeStack.pop();
		}

		m_typeStack.push(std::move(lastType));
	}

	auto& baseType = m_typeStack.top();
	if (tmpSCP != TypedefBase::StorageClassSpecifier::NONE) {
		baseType->SetStorageClass(tmpSCP);
	}

	// Append all stacked qualifiers onto the value object
	for (const auto& tq : tmpTQ) {
		baseType->SetQualifier(tq);
	}

	// Function inlining
	if (isInline) {
		baseType->SetInline();
	}

	return true;
}

bool Parser::TypenameSpecifier()
{
	if (MATCH_TOKEN(TK_IDENTIFIER)) {
		const auto& name = CURRENT_DATA()->As<std::string>();

		auto& res = m_typedefList[name];
		if (res == nullptr) {
			return false;
		}

		m_typeStack.push(Util::MakeTypedefType(name, res));
		return true;
	}

	return false;
}

bool Parser::StructOrUnionSpecifier()
{
	auto isUnion = false;

	switch (CURRENT_TOKEN()) {
	case TK_STRUCT:
		NextToken();
		break;
	case TK_UNION:
		NextToken();
		isUnion = true;
		break;
	default:
		return false;
	}

	std::string name;
	if (MATCH_TOKEN(TK_IDENTIFIER)) {
		name = CURRENT_DATA()->As<std::string>();
		NextToken();
	}

	if (MATCH_TOKEN(TK_BRACE_OPEN)) {
		using RecType = RecordDecl::RecordType;

		NextToken();
		auto rec = CoilCl::AST::MakeASTNode<RecordDecl>(isUnion ? RecType::UNION : RecType::STRUCT);
		rec->SetLocation(CURRENT_LOCATION());

		if (!name.empty()) {
			rec->SetName(name);
			m_recordList[std::make_pair(name, !static_cast<int>(isUnion))] = rec;
		}

		do {
			SpecifierQualifierList();

			for (;;) {
				Declarator();

				auto& decl = m_identifierStack.top();
				m_identifierStack.pop();
				auto field = CoilCl::AST::MakeASTNode<FieldDecl>(decl, m_typeStack.top());
				field->SetLocation(CURRENT_LOCATION());
				field->UpdateReturnType().SetPointer(m_pointerCounter);
				m_pointerCounter = 0;

				if (MATCH_TOKEN(TK_COLON)) {
					NextToken();
					ConstantExpression();
					field->SetBitField(std::dynamic_pointer_cast<IntegerLiteral>(m_elementDescentPipe.next()));
					m_elementDescentPipe.pop();
				}

				m_typeStack.pop();

				rec->AddField(field);

				if (NOT_TOKEN(TK_COMMA)) {
					break;
				}

				NextToken();
			}

			ExpectToken(TK_COMMIT);
		} while (NOT_TOKEN(TK_BRACE_CLOSE));
		ExpectToken(TK_BRACE_CLOSE);

		m_elementDescentPipe.push(rec);
		m_elementDescentPipe.lock();
	}
	else {
		using Specifier = Typedef::RecordType::Specifier;

		auto& res = m_recordList[std::make_pair(name, !static_cast<int>(isUnion))];
		if (res == nullptr) {
			return false;
		}

		m_typeStack.push(Util::MakeRecordType(name, isUnion ? Specifier::UNION : Specifier::STRUCT));
		m_comm.ShiftBackward();
	}

	return true;
}

void Parser::SpecifierQualifierList()
{
	std::vector<CoilCl::Typedef::TypedefBase::TypeQualifier> tmpTQ;
	auto typeCount = m_typeStack.size();

	bool cont = false;
	do {
		cont = false;

		// Find a type specifier
		if (typeCount == m_typeStack.size() && TypeSpecifier()) {
			NextToken();
			cont = true;
		}

		// Can have multiple type qualifiers, list them
		auto tq = TypeQualifier();
		if (tq != Typedef::TypedefBase::TypeQualifier::NONE) {
			NextToken();
			tmpTQ.push_back(tq);
			cont = true;
		}
	} while (cont);

	// Append all stacked storage classes and qualifiers onto the value object
	auto& baseType = m_typeStack.top();
	for (const auto& tq : tmpTQ) {
		baseType->SetQualifier(tq);
	}
}

bool Parser::EnumSpecifier()
{
	if (MATCH_TOKEN(TK_ENUM)) {
		NextToken();

		auto enm = CoilCl::AST::MakeASTNode<EnumDecl>();
		enm->SetLocation(CURRENT_LOCATION());

		if (MATCH_TOKEN(TK_IDENTIFIER)) {
			enm->SetName(CURRENT_DATA()->As<std::string>());
			NextToken();
		}

		if (MATCH_TOKEN(TK_BRACE_OPEN)) {
			for (;;) {
				NextToken();

				if (MATCH_TOKEN(TK_IDENTIFIER)) {
					auto enmConst = CoilCl::AST::MakeASTNode<EnumConstantDecl>(CURRENT_DATA()->As<std::string>());
					enmConst->SetLocation(CURRENT_LOCATION());

					NextToken();
					if (MATCH_TOKEN(TK_ASSIGN)) {
						NextToken();
						ConstantExpression();
						enmConst->SetAssignment(m_elementDescentPipe.next());
						m_elementDescentPipe.pop();
					}

					enm->AddConstant(enmConst);
				}

				if (NOT_TOKEN(TK_COMMA)) {
					break;
				}
			}
			ExpectToken(TK_BRACE_CLOSE);
		}

		m_elementDescentPipe.push(enm);
		m_elementDescentPipe.lock();
		return true;
	}

	return false;
}

bool Parser::UnaryOperator()
{
	switch (CURRENT_TOKEN()) {
	case TK_AMPERSAND:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = CoilCl::AST::MakeASTNode<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::ADDR, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		unaryOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	case TK_ASTERISK:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = CoilCl::AST::MakeASTNode<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::PTRVAL, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		unaryOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	case TK_PLUS:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = CoilCl::AST::MakeASTNode<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::INTPOS, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		unaryOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	case TK_MINUS:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = CoilCl::AST::MakeASTNode<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::INTNEG, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		unaryOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	case TK_TILDE:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = CoilCl::AST::MakeASTNode<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::BITNOT, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		unaryOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	case TK_NOT:
	{
		NextToken();
		CastExpression();

		auto resv = m_elementDescentPipe.next();
		m_elementDescentPipe.pop();
		auto unaryOp = CoilCl::AST::MakeASTNode<CoilCl::AST::UnaryOperator>(CoilCl::AST::UnaryOperator::UnaryOperator::BOOLNOT, CoilCl::AST::UnaryOperator::OperandSide::PREFIX, resv);
		unaryOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.push(unaryOp);
		break;
	}
	default:
		return false;
	}

	return true;
}

bool Parser::AssignmentOperator()
{
	switch (CURRENT_TOKEN()) {
	case TK_ASSIGN:
	{
		auto binOp = CoilCl::AST::MakeASTNode<BinaryOperator>(BinaryOperator::BinOperand::ASSGN, m_elementDescentPipe.next());
		binOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		binOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(binOp);
		break;
	}
	case TK_MUL_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = CoilCl::AST::MakeASTNode<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::MUL, resv);
		comOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_DIV_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = CoilCl::AST::MakeASTNode<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::DIV, resv);
		comOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_MOD_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = CoilCl::AST::MakeASTNode<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::MOD, resv);
		comOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_ADD_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = CoilCl::AST::MakeASTNode<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::ADD, resv);
		comOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_SUB_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = CoilCl::AST::MakeASTNode<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::SUB, resv);
		comOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_LEFT_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = CoilCl::AST::MakeASTNode<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::LEFT, resv);
		comOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		m_elementDescentPipe.pop();
		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_RIGHT_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = CoilCl::AST::MakeASTNode<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::RIGHT, resv);
		comOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_AND_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = CoilCl::AST::MakeASTNode<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::AND, resv);
		comOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_XOR_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = CoilCl::AST::MakeASTNode<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::XOR, resv);
		comOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	case TK_OR_ASSIGN:
	{
		auto resv = std::dynamic_pointer_cast<DeclRefExpr>(m_elementDescentPipe.next());
		auto comOp = CoilCl::AST::MakeASTNode<CompoundAssignOperator>(CompoundAssignOperator::CompoundAssignOperand::OR, resv);
		comOp->SetLocation(CURRENT_LOCATION());
		m_elementDescentPipe.pop();

		NextToken();
		AssignmentExpression();

		comOp->SetRightSide(m_elementDescentPipe.next());
		m_elementDescentPipe.pop();
		m_elementDescentPipe.push(comOp);
		break;
	}
	default:
		return false;
	}

	return true;
}

void Parser::PrimaryExpression()
{
	using Typedef::BuiltinType;
